--- a/src/signin.html
+++ b/src/signin.html
@@ -143,6 +143,7 @@
                         name="email"
                         placeholder="info@gmail.com"
                         class="dark:bg-dark-900 shadow-theme-xs focus:border-brand-300 focus:ring-brand-500/10 dark:focus:border-brand-800 h-11 w-full rounded-lg border border-gray-300 bg-transparent px-4 py-2.5 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30"
+                        required
                       />
                     </div>
                     <!-- Password -->
@@ -271,7 +272,7 @@
         </div>
 
         <div
-          class="bg-brand-950 relative hidden h-full w-full items-center lg:grid lg:w-1/2 dark:bg-white/5"
+          class="bg-brand-300 relative hidden h-full w-full items-center lg:grid lg:w-1/2 dark:bg-white/5"
         >
           <div class="z-1 flex items-center justify-center">
             <!-- ===== Common Grid Shape Start ===== -->
@@ -280,7 +281,7 @@
               <a href="index.html" class="mb-4 block">
                 <img src="/src/images/Ecorich_logo.png" alt="Logo" />
               </a>
-              <p class="text-center text-gray-400 dark:text-white/60">
+              <p class="text-center text-green-600 dark:text-green-900">
                 EcoRich Solutions
               </p>
             </div>
