--- a/src/socials.html
+++ b/src/socials.html
@@ -39,25 +39,13 @@
         <!-- ===== Header End ===== -->
 
         <!-- ===== Main Content Start ===== -->
-        <main>
-          <div class="mx-auto max-w-(--breakpoint-2xl) p-4 md:p-6">
-            <!-- Breadcrumb Start -->
-            <div x-data="{ pageName: `Calendar`}">
-              <include src="./partials/breadcrumb.html" />
-            </div>
-            <!-- Breadcrumb End -->
 
-            <div
-              class="rounded-2xl border border-gray-200 bg-white dark:border-gray-800 dark:bg-white/[0.03]"
-            >
-              <div id="calendar" class="min-h-screen"></div>
-            </div>
-
-            <!-- BEGIN MODAL -->
-            <include src="./partials/calendar-event-modal.html" />
-            <!-- END MODAL -->
-          </div>
-        </main>
+        <div class="align-text-bottom">
+          <h1 class="">
+            This is the social media page. <br />
+            Control all social media pages from here
+          </h1>
+        </div>
         <!-- ===== Main Content End ===== -->
       </div>
       <!-- ===== Content Area End ===== -->
