--- a/src/team.html
+++ b/src/team.html
@@ -40,9 +40,51 @@
 
         <!-- ===== Main Content Start ===== -->
 
-        <div class="align-text-bottom">
-          <h1 class="">This is the team page. <br /></h1>
+        <div class="p-6">
+          <h1 class="text-2xl font-bold mb-4">Team Members</h1>
+
+          <div
+            id="teamContainer"
+            class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 p-9"
+          >
+            <script src="/src/js/team.js"></script>
+
+            <script>
+              const container = document.getElementById("teamContainer");
+
+              suppliers.forEach((team_member) => {
+                const card = document.createElement("div");
+                card.className =
+                  "bg-white dark:bg-gray-800 p-5 rounded-xl shadow-md hover:shadow-lg transition";
+
+                card.innerHTML = `
+      <div class="flex items-center gap-4">
+        <img src="${team_member.image}" class="w-16 h-16 rounded-full object-cover" />
+        <div>
+          <h2 class="text-lg font-bold">${team_member.name}</h2>
+          <p class="text-sm">${team_member.location}</p>
+          <p class="text-sm">${team_member.phone}</p>
         </div>
+      </div>
+
+      <div class="mt-4 text-sm">
+        <p><strong>Status:</strong> 
+          <span class="${team_member.status === "active" ? "text-green-600" : "text-red-600"}">
+            ${team_member.status}
+          </span>
+        </p>
+        <p><strong>Reliability:</strong> ${"⭐".repeat(team_member.reliability)}</p>
+      </div>
+    `;
+
+                container.appendChild(card);
+              });
+            </script>
+          </div>
+        </div>
+
+        <!-- Load the script -->
+
         <!-- ===== Main Content End ===== -->
       </div>
       <!-- ===== Content Area End ===== -->
