Add render-tracking logic & connect data files to UI

--- a/src/team.html
+++ b/src/team.html
@@ -45,7 +45,7 @@
 
           <div
             id="teamContainer"
-            class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 p-9"
+            class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols- gap-8 p-9"
           >
             <script src="/src/js/team.js"></script>
 
