--- a/src/inventory.html
+++ b/src/inventory.html
@@ -40,14 +40,62 @@
 
         <!-- ===== Main Content Start ===== -->
 
-        <div class="align-text-bottom">
-          <h1 class="">This is the inventory page. <br /></h1>
-        </div>
+        <!-- INVENTORY SUMMARY -->
+        <section>
+          <h2 class="text-xl font-semibold mb-4">Inventory Summary</h2>
+          <div
+            id="inventory-summary-container"
+            class="grid grid-cols-1 md:grid-cols-3 gap-4"
+          ></div>
+        </section>
+
+        <!-- ITEM LIST -->
+        <section>
+          <h2 class="text-xl font-semibold mb-4">Item List</h2>
+          <input
+            type="text"
+            id="inventory-search"
+            placeholder="Search items..."
+            class="mb-4 p-2 border rounded w-full md:w-1/3"
+          />
+          <div class="overflow-x-auto">
+            <table
+              id="inventory-table"
+              class="min-w-full bg-white dark:bg-gray-800 rounded-xl shadow-md"
+            >
+              <thead class="bg-gray-100 dark:bg-gray-700">
+                <tr>
+                  <th class="p-3 text-left">Item</th>
+                  <th class="p-3 text-left">Category</th>
+                  <th class="p-3 text-left">Quantity</th>
+                  <th class="p-3 text-left">Status</th>
+                  <th class="p-3 text-left">Actions</th>
+                </tr>
+              </thead>
+              <tbody id="inventory-table-body">
+                <!-- JS will insert rows here -->
+              </tbody>
+            </table>
+          </div>
+        </section>
+        <br />
+        <br />
+        <br />
+
+        <!-- LOW STOCK ALERTS -->
+        <section>
+          <h2 class="text-xl font-semibold mb-4">Low Stock Alerts</h2>
+          <div id="low-stock-container" class="space-y-4">
+            <!-- JS will insert alerts here -->
+          </div>
+        </section>
 
         <!-- ===== Main Content End ===== -->
       </div>
       <!-- ===== Content Area End ===== -->
     </div>
     <!-- ===== Page Wrapper End ===== -->
+    <script src="/src/js/inventory/inventory-data.js"></script>
+    <script src="/src/js/inventory/render-inventory.js"></script>
   </body>
 </html>
