--- a/src/profile.html
+++ b/src/profile.html
@@ -330,7 +330,7 @@
                         <p
                           class="mb-2 text-xs leading-normal text-gray-500 dark:text-gray-400"
                         >
-                          City/State
+                          City
                         </p>
                         <p
                           class="text-sm font-medium text-gray-800 dark:text-white/90"
