--- a/src/inventory.html
+++ b/src/inventory.html
@@ -7,7 +7,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Calendar | EcoRich Admin Dashboard Template</title>
+    <title>Inventory | EcoRich Admin Dashboard Template</title>
   </head>
   <body
     x-data="{ page: 'calendar', 'loaded': true, 'darkMode': false, 'stickyMenu': false, 'sidebarToggle': false, 'scrollTop': false }"
@@ -42,12 +42,14 @@
 
         <!-- INVENTORY SUMMARY -->
         <section>
-          <h2 class="text-xl font-semibold mb-4">Inventory Summary</h2>
+          <h2 class="text-xxl font-bold mb-4">Inventory Summary</h2>
           <div
             id="inventory-summary-container"
             class="grid grid-cols-1 md:grid-cols-3 gap-4"
           ></div>
         </section>
+        <br />
+        <br />
 
         <!-- ITEM LIST -->
         <section>
@@ -56,7 +58,7 @@
             type="text"
             id="inventory-search"
             placeholder="Search items..."
-            class="mb-4 p-2 border rounded w-full md:w-1/3"
+            class="mb-4 p-2 border rounded w-full md:w-1/3 bg-white"
           />
           <div class="overflow-x-auto">
             <table
