--- a/src/team.html
+++ b/src/team.html
@@ -39,56 +39,23 @@
         <!-- ===== Header End ===== -->
 
         <!-- ===== Main Content Start ===== -->
-
-        <div class="p-6">
-          <h1 class="text-2xl font-bold mb-4">Team Members</h1>
-
+        <!-- TEAM LIST (using cards) -->
+        <section>
+          <h2 class="text-2xl font-bold mb-4">Our Team</h2>
           <div
-            id="teamContainer"
-            class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols- gap-8 p-9"
+            id="team-cards-container"
+            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6"
           >
-            <script src="/src/js/team.js"></script>
-
-            <script>
-              const container = document.getElementById("teamContainer");
-
-              suppliers.forEach((team_member) => {
-                const card = document.createElement("div");
-                card.className =
-                  "bg-white dark:bg-gray-800 p-5 rounded-xl shadow-md hover:shadow-lg transition";
-
-                card.innerHTML = `
-      <div class="flex items-center gap-4">
-        <img src="${team_member.image}" class="w-16 h-16 rounded-full object-cover" />
-        <div>
-          <h2 class="text-lg font-bold">${team_member.name}</h2>
-          <p class="text-sm">${team_member.location}</p>
-          <p class="text-sm">${team_member.phone}</p>
-        </div>
-      </div>
-
-      <div class="mt-4 text-sm">
-        <p><strong>Status:</strong> 
-          <span class="${team_member.status === "active" ? "text-green-600" : "text-red-600"}">
-            ${team_member.status}
-          </span>
-        </p>
-        <p><strong>Reliability:</strong> ${"⭐".repeat(team_member.reliability)}</p>
-      </div>
-    `;
-
-                container.appendChild(card);
-              });
-            </script>
+            <!-- JS will insert cards here -->
           </div>
-        </div>
-
-        <!-- Load the script -->
+        </section>
 
         <!-- ===== Main Content End ===== -->
       </div>
       <!-- ===== Content Area End ===== -->
     </div>
     <!-- ===== Page Wrapper End ===== -->
+    <script src="/src/js/team-js/team-data.js"></script>
+    <script src="/src/js/team-js/render-team.js"></script>
   </body>
 </html>
