--- a/src/socials.html
+++ b/src/socials.html
@@ -7,7 +7,7 @@
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Calendar | EcoRich Admin Dashboard Template</title>
+    <title>Socials EcoRich | EcoRich Admin Dashboard Template</title>
   </head>
   <body
     x-data="{ page: 'calendar', 'loaded': true, 'darkMode': false, 'stickyMenu': false, 'sidebarToggle': false, 'scrollTop': false }"
@@ -39,17 +39,354 @@
         <!-- ===== Header End ===== -->
 
         <!-- ===== Main Content Start ===== -->
+        <!-- ===== Main Content Start ===== -->
+        <main
+          class="mx-auto max-w-screen-45xl p-4 md:p-6 2xl:p-10"
+          x-data="socialsData()"
+        >
+          <!-- Page Header -->
+          <div class="flex items-center justify-between mb-6">
+            <h1 class="text-2xl font-semibold text-gray-900 dark:text-white">
+              Socials
+            </h1>
+            <button
+              @click="showCreateModal = true"
+              class="rounded-lg bg-green-600 px-4 py-2 text-sm font-medium text-white hover:bg-green-700"
+            >
+              + Create Post
+            </button>
+          </div>
 
-        <div class="align-text-bottom">
-          <h1 class="">
-            This is the social media page. <br />
-            Control all social media pages from here
-          </h1>
-        </div>
+          <!-- Platform Cards with Icons -->
+          <div
+            class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 mb-6"
+          >
+            <div
+              class="rounded-lg border bg-white p-4 shadow-md text-center dark:bg-gray-800"
+            >
+              <svg
+                class="mx-auto h-6 w-6 text-blue-600"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <!-- Facebook icon SVG -->
+              </svg>
+              Facebook
+              <p class="text-sm text-green-500">Connected</p>
+              <button class="text-xs text-gray-500 hover:underline">
+                Manage
+              </button>
+            </div>
+            <div
+              class="rounded-lg border bg-white p-4 shadow-md text-center dark:bg-gray-800"
+            >
+              <svg
+                class="mx-auto h-6 w-6 text-pink-600"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <!-- Instagram icon -->
+              </svg>
+              Instagram
+              <p class="text-sm text-red-500">Not connected</p>
+              <button class="text-xs text-blue-500 hover:underline">
+                Connect
+              </button>
+            </div>
+            <div
+              class="rounded-lg border bg-white p-4 shadow-md text-center dark:bg-gray-800"
+            >
+              <svg
+                class="mx-auto h-6 w-6 text-black"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <!-- X/Twitter icon -->
+              </svg>
+              X (Twitter)
+              <p class="text-sm text-green-500">Connected</p>
+              <button class="text-xs text-gray-500 hover:underline">
+                Manage
+              </button>
+            </div>
+            <div
+              class="rounded-lg border bg-white p-4 shadow-md text-center dark:bg-gray-800"
+            >
+              <svg
+                class="mx-auto h-6 w-6 text-blue-700"
+                fill="currentColor"
+                viewBox="0 0 24 24"
+              >
+                <!-- LinkedIn icon -->
+              </svg>
+              LinkedIn
+              <p class="text-sm text-green-500">Connected</p>
+              <button class="text-xs text-gray-500 hover:underline">
+                Manage
+              </button>
+            </div>
+          </div>
+
+          <!-- Analytics Section -->
+          <div
+            class="mb-6 rounded-lg border bg-white p-4 shadow-md dark:bg-gray-800"
+          >
+            <h2 class="text-lg font-medium mb-4 dark:text-white">
+              Post Analytics
+            </h2>
+            <canvas id="engagementChart" height="200"></canvas>
+          </div>
+
+          <!-- Posts Table -->
+          <div
+            class="overflow-x-auto rounded-lg border bg-white mb-6 shadow-md dark:bg-gray-800"
+          >
+            <table
+              class="min-w-full divide-y divide-gray-200 dark:divide-gray-700"
+            >
+              <thead class="bg-gray-50 dark:bg-gray-700">
+                <tr>
+                  <th
+                    class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer"
+                    @click="sortPosts('content')"
+                  >
+                    Post
+                  </th>
+                  <th
+                    class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer"
+                    @click="sortPosts('platform')"
+                  >
+                    Platform
+                  </th>
+                  <th
+                    class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider cursor-pointer"
+                    @click="sortPosts('date')"
+                  >
+                    Date
+                  </th>
+                  <th
+                    class="px-6 py-3 text-right text-xs font-medium text-gray-500 uppercase tracking-wider"
+                  >
+                    Actions
+                  </th>
+                </tr>
+              </thead>
+              <tbody
+                class="bg-white divide-y divide-gray-200 dark:bg-gray-900 dark:divide-gray-700"
+              >
+                <template x-for="post in sortedPosts" :key="post.id">
+                  <tr>
+                    <td
+                      class="px-6 py-4 whitespace-nowrap"
+                      x-text="post.content"
+                    ></td>
+                    <td
+                      class="px-6 py-4 whitespace-nowrap"
+                      x-text="post.platform"
+                    ></td>
+                    <td
+                      class="px-6 py-4 whitespace-nowrap"
+                      x-text="post.date"
+                    ></td>
+                    <td class="px-6 py-4 text-right">
+                      <button class="text-blue-500 hover:underline">
+                        Edit
+                      </button>
+                      <button class="text-red-500 hover:underline ml-2">
+                        Delete
+                      </button>
+                    </td>
+                  </tr>
+                </template>
+              </tbody>
+            </table>
+          </div>
+
+          <!-- Create Post Modal -->
+          <div
+            x-show="showCreateModal"
+            class="fixed inset-0 flex items-center justify-center z-50 bg-black bg-opacity-50"
+            @click="showCreateModal = false"
+          >
+            <div
+              class="bg-white p-6 rounded-lg shadow-xl w-full max-w-lg dark:bg-gray-800"
+              @click.stop
+            >
+              <h2 class="text-xl font-semibold mb-4 dark:text-white">
+                Create Social Post
+              </h2>
+              <form @submit.prevent="addPost">
+                <textarea
+                  placeholder="Write your post content here..."
+                  class="w-full p-2 border rounded mb-4 dark:bg-gray-700 dark:text-white"
+                  rows="4"
+                  x-model="newPost.content"
+                ></textarea>
+                <div class="mb-4">
+                  <label
+                    class="block text-sm font-medium mb-2 dark:text-gray-300"
+                    >Publish to</label
+                  >
+                  <div class="flex gap-4 flex-wrap">
+                    <label class="dark:text-gray-300"
+                      ><input
+                        type="checkbox"
+                        value="Facebook"
+                        x-model="newPost.platforms"
+                      />
+                      Facebook</label
+                    >
+                    <label class="dark:text-gray-300"
+                      ><input
+                        type="checkbox"
+                        value="Instagram"
+                        x-model="newPost.platforms"
+                      />
+                      Instagram</label
+                    >
+                    <label class="dark:text-gray-300"
+                      ><input
+                        type="checkbox"
+                        value="X (Twitter)"
+                        x-model="newPost.platforms"
+                      />
+                      X (Twitter)</label
+                    >
+                    <label class="dark:text-gray-300"
+                      ><input
+                        type="checkbox"
+                        value="LinkedIn"
+                        x-model="newPost.platforms"
+                      />
+                      LinkedIn</label
+                    >
+                  </div>
+                </div>
+                <div class="mb-4">
+                  <label
+                    class="block text-sm font-medium mb-2 dark:text-gray-300"
+                    >Media</label
+                  >
+                  <input
+                    type="file"
+                    multiple
+                    class="w-full p-2 border rounded dark:bg-gray-700"
+                  />
+                </div>
+                <button
+                  type="submit"
+                  class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700"
+                >
+                  Publish
+                </button>
+              </form>
+            </div>
+          </div>
+        </main>
+        <!-- ===== Main Content End ===== -->
+
+        <script>
+          function socialsData() {
+            return {
+              showCreateModal: false,
+              posts: [
+                {
+                  id: 1,
+                  content: "New eco-fertilizer launch!",
+                  platform: "Facebook",
+                  date: "Dec 15, 2025",
+                },
+                {
+                  id: 2,
+                  content: "Sustainability tips for farmers.",
+                  platform: "Instagram",
+                  date: "Dec 10, 2025",
+                },
+                {
+                  id: 3,
+                  content: "Partner event in Thika.",
+                  platform: "LinkedIn",
+                  date: "Dec 5, 2025",
+                },
+                {
+                  id: 4,
+                  content: "Waste recycling workshop.",
+                  platform: "Facebook",
+                  date: "Nov 30, 2025",
+                },
+              ],
+              newPost: { content: "", platforms: [] },
+              sortKey: "date",
+              sortAsc: false,
+              sortedPosts() {
+                return [...this.posts].sort((a, b) => {
+                  let valA = a[this.sortKey],
+                    valB = b[this.sortKey];
+                  return this.sortAsc
+                    ? valA > valB
+                      ? 1
+                      : -1
+                    : valA < valB
+                      ? 1
+                      : -1;
+                });
+              },
+              sortPosts(key) {
+                this.sortAsc = this.sortKey === key ? !this.sortAsc : false;
+                this.sortKey = key;
+              },
+              addPost() {
+                if (this.newPost.content) {
+                  this.posts.push({
+                    id: this.posts.length + 1,
+                    content: this.newPost.content,
+                    platform: this.newPost.platforms.join(", "),
+                    date: new Date().toLocaleDateString(),
+                  });
+                  this.newPost = { content: "", platforms: [] };
+                  this.showCreateModal = false;
+                  alert("Post published!");
+                }
+              },
+            };
+          }
+
+          // Chart init
+          document.addEventListener("DOMContentLoaded", () => {
+            new Chart(document.getElementById("engagementChart"), {
+              type: "line",
+              data: {
+                labels: ["Nov 30", "Dec 5", "Dec 10", "Dec 15"],
+                datasets: [
+                  {
+                    label: "Engagement",
+                    data: [50, 100, 150, 200],
+                    borderColor: "green",
+                  },
+                ],
+              },
+              options: {
+                responsive: true,
+                scales: { y: { beginAtZero: true } },
+              },
+            });
+          });
+        </script>
+
         <!-- ===== Main Content End ===== -->
       </div>
       <!-- ===== Content Area End ===== -->
     </div>
     <!-- ===== Page Wrapper End ===== -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+    ></script>
+    <script src="/src/js/socials-js/socials-data.js"></script>
+    <script src="/src/js/socials-js/render-socials.js"></script>
   </body>
 </html>
