--- a/src/signin.html
+++ b/src/signin.html
@@ -21,7 +21,10 @@
     <!-- ===== Preloader End ===== -->
 
     <!-- ===== Page Wrapper Start ===== -->
-    <div class="relative z-1 bg-white p-6 sm:p-0 dark:bg-gray-900">
+    <div
+      class="relative z-1 bg-white p-6 sm:p-0 dark:bg-gray-900"
+      x-data="signinForm"
+    >
       <div
         class="relative flex h-screen w-full flex-col justify-center sm:p-0 lg:flex-row dark:bg-gray-900"
       >
@@ -128,11 +131,12 @@
                     >
                   </div>
                 </div>
-                <form>
+                <form id="signinForm" @submit.prevent="handleSubmit">
                   <div class="space-y-5">
                     <!-- Email -->
                     <div>
                       <label
+                        for="email"
                         class="mb-1.5 block text-sm font-medium text-gray-700 dark:text-gray-400"
                       >
                         Email<span class="text-error-500">*</span>
@@ -141,14 +145,16 @@
                         type="email"
                         id="email"
                         name="email"
+                        x-model="form.email"
+                        @change="validateField('email')"
                         placeholder="info@gmail.com"
                         class="dark:bg-dark-900 shadow-theme-xs focus:border-brand-300 focus:ring-brand-500/10 dark:focus:border-brand-800 h-11 w-full rounded-lg border border-gray-300 bg-transparent px-4 py-2.5 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30"
-                        required
                       />
                     </div>
                     <!-- Password -->
                     <div>
                       <label
+                        for="password"
                         class="mb-1.5 block text-sm font-medium text-gray-700 dark:text-gray-400"
                       >
                         Password<span class="text-error-500">*</span>
@@ -156,6 +162,10 @@
                       <div x-data="{ showPassword: false }" class="relative">
                         <input
                           :type="showPassword ? 'text' : 'password'"
+                          id="password"
+                          name="password"
+                          x-model="form.password"
+                          @change="validateField('password')"
                           placeholder="Enter your password"
                           class="dark:bg-dark-900 shadow-theme-xs focus:border-brand-300 focus:ring-brand-500/10 dark:focus:border-brand-800 h-11 w-full rounded-lg border border-gray-300 bg-transparent py-2.5 pr-11 pl-4 text-sm text-gray-800 placeholder:text-gray-400 focus:ring-3 focus:outline-hidden dark:border-gray-700 dark:bg-gray-900 dark:text-white/90 dark:placeholder:text-white/30"
                         />
@@ -200,23 +210,23 @@
                     </div>
                     <!-- Checkbox -->
                     <div class="flex items-center justify-between">
-                      <div x-data="{ checkboxToggle: false }">
+                      <div>
                         <label
-                          for="checkboxLabelOne"
+                          for="rememberMe"
                           class="flex cursor-pointer items-center text-sm font-normal text-gray-700 select-none dark:text-gray-400"
                         >
                           <div class="relative">
                             <input
                               type="checkbox"
-                              id="checkboxLabelOne"
+                              id="rememberMe"
+                              x-model="form.rememberMe"
                               class="sr-only"
-                              @change="checkboxToggle = !checkboxToggle"
                             />
                             <div
-                              :class="checkboxToggle ? 'border-brand-500 bg-brand-500' : 'bg-transparent border-gray-300 dark:border-gray-700'"
+                              :class="form.rememberMe ? 'border-brand-500 bg-brand-500' : 'bg-transparent border-gray-300 dark:border-gray-700'"
                               class="mr-3 flex h-5 w-5 items-center justify-center rounded-md border-[1.25px]"
                             >
-                              <span :class="checkboxToggle ? '' : 'opacity-0'">
+                              <span :class="form.rememberMe ? '' : 'opacity-0'">
                                 <svg
                                   width="14"
                                   height="14"
@@ -247,9 +257,37 @@
                     <!-- Button -->
                     <div>
                       <button
-                        class="bg-brand-500 shadow-theme-xs hover:bg-brand-600 flex w-full items-center justify-center rounded-lg px-4 py-3 text-sm font-medium text-white transition"
+                        type="submit"
+                        :disabled="isLoading"
+                        class="bg-brand-500 shadow-theme-xs hover:bg-brand-600 flex w-full items-center justify-center rounded-lg px-5 py-4 text-sm font-medium text-white transition disabled:opacity-70 disabled:cursor-not-allowed"
                       >
-                        Sign In
+                        <span x-show="!isLoading">Sign In</span>
+                        <span
+                          x-show="isLoading"
+                          class="flex items-center gap-2"
+                        >
+                          <svg
+                            class="animate-spin h-4 w-4"
+                            xmlns="http://www.w3.org/2000/svg"
+                            fill="none"
+                            viewBox="0 0 24 24"
+                          >
+                            <circle
+                              class="opacity-25"
+                              cx="12"
+                              cy="12"
+                              r="10"
+                              stroke="currentColor"
+                              stroke-width="4"
+                            ></circle>
+                            <path
+                              class="opacity-75"
+                              fill="currentColor"
+                              d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
+                            ></path>
+                          </svg>
+                          Signing in...
+                        </span>
                       </button>
                     </div>
                   </div>
@@ -326,5 +364,94 @@
       </div>
     </div>
     <!-- ===== Page Wrapper End ===== -->
+
+    <script type="module">
+      import { signIn, validateEmail } from "./js/auth/auth.js";
+      import { displayFormErrors, showToast } from "./js/auth/form-ui.js";
+
+      document.addEventListener("alpine:init", () => {
+        Alpine.data("signinForm", () => ({
+          form: {
+            email: "",
+            password: "",
+            rememberMe: false,
+          },
+          isLoading: false,
+          errors: [],
+
+          async handleSubmit() {
+            this.isLoading = true;
+            this.errors = [];
+
+            try {
+              const result = await signIn(this.form.email, this.form.password);
+
+              if (result.success) {
+                showToast("Welcome back! " + result.user.fname, "success");
+                setTimeout(() => {
+                  window.location.href = "/index.html";
+                }, 1500);
+              } else {
+                this.errors = result.errors;
+                displayFormErrors(
+                  this.errors,
+                  document.getElementById("signinForm")
+                );
+              }
+            } catch (error) {
+              this.errors = [error.message];
+              displayFormErrors(
+                this.errors,
+                document.getElementById("signinForm")
+              );
+            } finally {
+              this.isLoading = false;
+            }
+          },
+
+          validateField(fieldName) {
+            const field = document.getElementById(fieldName);
+            let error = null;
+
+            switch (fieldName) {
+              case "email":
+                if (!this.form.email || !validateEmail(this.form.email)) {
+                  error = "Valid email is required";
+                }
+                break;
+              case "password":
+                if (!this.form.password) {
+                  error = "Password is required";
+                }
+                break;
+            }
+
+            if (field && error) {
+              field.classList.add(
+                "border-red-500",
+                "focus:border-red-500",
+                "focus:ring-red-500/10"
+              );
+              field.classList.remove(
+                "border-gray-300",
+                "focus:border-brand-300",
+                "focus:ring-brand-500/10"
+              );
+            } else if (field) {
+              field.classList.remove(
+                "border-red-500",
+                "focus:border-red-500",
+                "focus:ring-red-500/10"
+              );
+              field.classList.add(
+                "border-gray-300",
+                "focus:border-brand-300",
+                "focus:ring-brand-500/10"
+              );
+            }
+          },
+        }));
+      });
+    </script>
   </body>
 </html>
