changed signin to index

--- a/src/profile.html
+++ b/src/profile.html
@@ -361,7 +361,7 @@
                         <p
                           class="text-sm font-medium text-gray-800 dark:text-white/90"
                         >
-                          Admin01
+                          Admin
                         </p>
                       </div>
                     </div>
