--- a/src/signup.html
+++ b/src/signup.html
@@ -32,7 +32,7 @@
         <div class="flex w-full flex-1 flex-col lg:w-1/2">
           <div class="mx-auto w-full max-w-md pt-5 sm:py-10">
             <a
-              href="index.html"
+              href="dashboard.html"
               class="inline-flex items-center text-sm text-gray-500 transition-colors hover:text-gray-700 dark:text-gray-400 dark:hover:text-gray-300"
             >
               <svg
@@ -402,7 +402,7 @@
                 >
                   Already have an account?
                   <a
-                    href="/signin.html"
+                    href="/index.html"
                     class="text-brand-500 hover:text-brand-600 dark:text-brand-400"
                     >Sign In</a
                   >
@@ -418,7 +418,7 @@
             <!-- ===== Common Grid Shape Start ===== -->
             <include src="./partials/common-grid-shape.html"></include>
             <div class="flex max-w-xs flex-col items-center">
-              <a href="index.html" class="mb-4 block">
+              <a href="dashboard.html" class="mb-4 block">
                 <img src="/src/images/Ecorich_logo.png" alt="Logo" />
               </a>
               <p class="text-center text-gray-400 dark:text-white/60">
