Testing auth bypass bug

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -87,5 +87,9 @@
     </div>
     <!-- ===== Page Wrapper End ===== -->
      
+    <script type="module">
+      import { protectPage } from './js/auth/guard.js';
+      protectPage('/index.html');
+    </script>
   </body>
 </html>
