updated guard file

--- a/src/dashboard.html
+++ b/src/dashboard.html
@@ -92,5 +92,9 @@
     <!-- ===== Page Wrapper End ===== -->
      
     
+    <script type="module">
+  import { protectPage } from "./js/auth/guard.js";
+  protectPage("/index.html");
+</script>
   </body>
 </html>
