Changes the Ruth profile

--- a/src/index.html
+++ b/src/index.html
@@ -324,11 +324,6 @@
       </div>
     </div>
     <!-- ===== Page Wrapper End ===== -->
-
-    <script type="module" src="/src/js/auth/signin-form.js"></script>
-    <script type="module">
-      import { redirectIfAuthenticated } from "./js/auth/guard.js";
-      redirectIfAuthenticated();
-    </script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
